# book-metadata

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cmakedebugcommands.cmake
cmake/: FindLIBPODOFO.cmake
python/: book.epub  content.opf  contentparse.py  test.py
python/OEBPS/: 1.html  2.html  3.html  4.html  5.html  6.html  content.opf  template.css  titlepage.xhtml  toc.ncx
src/: CMakeLists.txt  book.h  djvu.cpp  djvu.h  epub.cpp  epub.h  libxml++config.h  main.cpp  pdf.cpp  pdf.h  test.cpp
